Fix stupid error from fix for bug 16603 (DOM doesn't throw INVALID_CHARACTER_ERR for arguments with invalid characters). r/sr=jst, a=choffman.